<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="VRIJEME ZA PODNE NAMAZ"
                    android:textColor="@android:color/darker_gray"
                    fontPath="fonts/RobotoCondensed-Regular.ttf"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/fragment_vakat_tweaks_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    fontPath="fonts/RobotoCondensed-Regular.ttf"
                    android:layout_marginLeft="10dp">

                    <RadioButton
                        android:id="@+id/radioNormalized"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/standard_time"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fontPath="fonts/RobotoCondensed-Regular.ttf"
                        android:layout_marginLeft="30dp"
                        android:text="Podne je u 12:00h za zimsko računanje ili u 13:00h za ljetno računanje vremena" />

                    <RadioButton
                        android:id="@+id/radioReal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        fontPath="fonts/RobotoCondensed-Regular.ttf"
                        android:text="@string/real_time"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fontPath="fonts/RobotoCondensed-Regular.ttf"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="20dp"
                        android:text="Podne je tačno onda kada nastupi" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="PODNE I DŽUMA"
                    fontPath="fonts/RobotoCondensed-Regular.ttf"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/fragment_vakat_tweaks_jumaChbox"
                    android:text="Koristi posebne postavke za džumu"
                    fontPath="fonts/RobotoCondensed-Regular.ttf"
                    android:checked="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fragment_vakat_tweaks_juma_explTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    fontPath="fonts/RobotoCondensed-Regular.ttf"
                    android:layout_marginBottom="20dp"
                    android:text="@string/prefs_separateJumaSettings_enabled" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/wizard_bottom_nav" />

</LinearLayout>